css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
    margin: 0px;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutralStar {
    color: var(--main-bg-color)
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 65%;
}

.hebergements-cards {
    display: flex;
    flex-direction: row;
    flex-wrap:wrap;
    justify-content: space-around;
    margin-bottom: 30px;
}

.hebergements-cards .card {
    width: 30%;
    height: 190px;
    margin-top: 33px;
}

.hebergements-cards .card-content {
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: content-box;
}

.hebergements-cards img {
    width: 100%;
    height: 110px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.hebergements-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.hebergements-cards .card-subtitle {
    margin: 0;
}

.hebergements-cards .card-rating {
    margin-bottom: 5px;
}

.more-hebergements {
    color: black;
    text-decoration: none;
    font-size: 18px;
    font-weight: 700;
}

.more-hebergements:visited {
    color: black;
}

/****** Populaires ***********/
.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 134px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}

/* Header */
nav a {
    text-decoration: none;
    color: black;
}

.navigation a {
    margin: 0 10px;
}

nav a:visited {
    color: black;
}
.navigation a:hover {
    color: #0065FC;
    border-top: solid 2px #0065FC;
    padding-top: 17px;
}
.form-searsh {
    display: flex;
    width: 100%;
}

#navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-bottom: 45px;
    padding-top: 16px;
}

#paragraph {
    padding-bottom: 10px;
    margin-top: 5px;
}

/* searsh bar creation  */
.searsh-bar {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-bottom: 35px;
}

.fa-location-dot {
    color: black;
}

label {
    border:solid 1px #F2F2F2;
    border-right: none;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    background-color: #F2F2F2;
    padding: 10px;
    font-size: 14px;
}

input {
    border: solid 1px #F2F2F2;
    border-left: none;
    border-right: none;
    padding: 10px;
    color: black;
    font-weight: 700;
}

.searsh-bar button {
    border: solid 1px #0065FC;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    background-color: #0065FC;
    padding: 10px;
    color: white;
    font-weight: 700;
}

.fa-magnifying-glass {
    display: none;
    color:white;
    visibility: hidden;
}

/* Filters  */
.section-filters {
    display:flex;
    flex-direction: row;
    align-items: center;
    gap: 30px;
    padding-bottom: 10px;
}

.section-filters button {
    border: solid 2px #D9D9D9;
    border-radius: 25px;
    background-color:white;
    font-weight: 700;
    padding: 10px; 
}

.section-filters button:hover {
    background-color:#DEEBFF;
}

.section-filters i {
    margin-right: 10px;
}

.fa-info {
    border:solid 1px #D9D9D9;
    border-radius: 20px;
    background-color: white;
    padding:2px 7px 2px 7px;
}

/* Activities section  */
.activities-cards {
    display: flex;
    justify-content: space-between;
    margin-top: 30px;
}
.activities-cards .card {
    width: 20%;
    height: 400px;
    padding: 0px;
}

.activities-cards img {
    width: 100%;
    height: 345px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    
}
.activities-cards .card-txt {
    text-align:left;
    padding-left: 10px;
    padding-bottom: 10px;
}
.activities {
    padding-top: 30px;
    padding-bottom: 30px;
}

/* Footer */
.footer_section {
    display: flex;
    flex-direction: row;
    background-color: #F2F2F2;
    align-items: flex-start;
    justify-content: space-around;
    margin-top: 30px;
}

.footer_text a {
    text-decoration: none;
    color: black;
}

.footer_text a:active {
    color: black;
}

 a {
    text-decoration: none;
    color: black;
    display: inline;
}

.neutral-star {
    color:#D9D9D9;
}

/* cards transition  */
.card:hover {
    transform: translateY(-5px);
    box-shadow: 0px 10px 20px rgba(0,0,0,0.3);
  }
  
/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/ 
@media (max-width: 1237px) {

    .hebergements-and-populaires section {
        padding: 20px;
    }

    .hebergements-cards .card-title {
        white-space: nowrap;
    }

    .hebergements-cards .card-content {
        padding-left: 2px;
    }

    .activities-cards .card {
        height: 400px;
    }

    .activities-cards .card-title {
        font-size: 14px;
      } 
}

/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards .card {
        width: 90%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }
    .section-filters {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 0px;
    }
    .card-link {
        display: flex;
        width: 90%;
        height: 100%;
        text-decoration: none;
        justify-content: center;
      }
      
      .activities-cards .card-title {
        font-size: 14px;
      }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    
    .navigation a:hover {
        color: #0065FC;
        border-top: none;
        border-bottom-width: 2px;
        border-bottom-style: solid;
        padding-top: 17px;
    }

    #navbar {
        display: flex;
        flex-direction: column;
        gap: 35px;
        font-size: 25px;
    }

    .navigation {
        display: flex;
        text-align: center;
        width: 100%;
    }

    .navigation a {
        margin: 0px;
        border-bottom-width: 2px;
        border-bottom-style: solid;
        border-bottom-color: #D9D9D9;
        padding: 15px;
    }

    #nav1, #nav2 {
        width: 50%;
    }

    .navigation a:hover {
        color: #0065FC;
        border-bottom: solid 2px #0065FC;
        padding-bottom: 17px;
        border-bottom-color: #0065FC;
    }

    .section-title {
        padding-top: 35px;
        font-weight: 700;
        font-size: 30px;
        line-height: 47px;
        padding-top: 35px;
    }

    #principal-title {
        padding-top: 0px;
        padding-left: 30px;
        padding-right: 30px;
    }

    #paragraph {
        font-size: 22px;
        padding-left: 30px;
        padding-right: 30px;
    }

    /* searsh bar  */
    .searsh-bar {
        display: flex;
        justify-content: center;
        padding-bottom: 0px;
    }

    .form-searsh {
        display: flex;
        justify-content: center;
        padding-top: 15px;
    }

    label, input {
        padding: 19px;
    }
    .searsh-bar button {
        padding: 19px;
        
    }

    .fa-magnifying-glass {
        display:contents;
    }

    /* filters  */
    .section-filters {
        display: block;
        gap: 0px;
        padding: 0px;
    }
    .section-filters h3 {
        padding-left: 30px; 
        padding-bottom: 15px;
        padding-top: 15px;
    }

    .filters-buttons button {
        width: 38%;
        padding: 20px 0px 18px 0px;
    }

    .filters-buttons {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        gap: 15px;
    }

    .section-filters i {
        font-size: 22px;
    }

    .hebergements-cards {
        margin-top:0px
    }

    .populaires-cards, .activities-cards, .footer_section, .hebergements-cards {
        flex-direction: column;
    }

    .populaires-cards .card {
        width: 100%;
    }

    .hebergements-cards img {
        height: 177px;
        object-fit: cover;
        object-position: 0% 55%;
    }

    .hebergements-cards .card {
        width: 99%;
        height: 253px;
    }

    .activities-cards {
        gap: 35px;
    }

    .logo img {
        height: 35px;
    }

    .main-container {
        padding: 0px;
    }

    .hebergements-and-populaires section {
        border-radius: 0px;
    }

    .activities {
        padding: 30px;
        padding-right: 30px;
    }

    .hebergements-and-populaires {
        display: flex;
    }

    .hebergements {
        flex: 1;
        order: 2;
    }

    .populaires {
        background-color: var(--main-bg-color);
        margin-top: 15px;
    }
    
    .footer_text {
        padding-left: 30px;
        padding-right: 30px;
    }

    .activities-cards .card {
        height: 253px;
        width: 100%;
    }

    .activities-cards img {
        height: 192px;
    }
    
    .hebergements-and-populaires .hebergements {
        background-color: #ffffff;
        margin-top: 25px;
    }

    .information {
        padding-left: 30px;
        padding-right: 30px;
        padding-top: 25px;
        padding-bottom: 25px;
    }

    .card-link {
        width: 100%;
    }

    #card1 {
        order: -1;
    }

    #card2 {
        order:5;
    }

    #card3 {
        order:2;
    }

    #card4 {
        order: 3;
    }

    #card5 {
        order: 1;
    }

    #card6 {
        order: 4;
    }


}

